# projeto-django-1

./: .coverage  .coveragerc  .env  .env-example  .gitignore  db.sqlite3  manage.py  pyproject.toml  pytest.ini
__localcode/: main.py
authors/: forms.py  urls.py  views.py
authors/forms/: recipe.py
authors/templates/authors/pages/: dashboard.html  login.html  register.html
projeto_django_1/: asgi.py  settings.py  urls.py  wsgi.py
recipes/: admin.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_alter_recipe_category_alter_recipe_cover_and_more.py
recipes/static/recipes/css/: styles.css
recipes/templates/recipes/pages/: category.html  home.html  recipe-view.html
recipes/templates/recipes/partials/: head.html  header.html  pagination.html  recipe.html  search.html
recipes/views/: __init__.py  base.py  detail.py  home.py
resources/utils/: pagination.py
static/global/css/: styles.css
templates/global/: base.html
templates/global/partials/: form.html
tests/: test_recipe_base.py  test_recipe_urls.py  test_recipe_views.py
tests/forms/: test_author_register.py
tests/functional/authors/: base.py  test_register.py
tests/functional/recipes/: base.py  test_home_page.py
tests/models/: test_model_recipe.py
tests/views/: test_recipe_category.py  test_recipe_detail.py  test_recipe_home.py  test_recipe_pagination.py  test_recipe_search.py
