[tool.poetry]
name = "projeto-django-1"
version = "0.1.0"
description = ""
authors = ["joserobertoferreira <joseroberto.ferreira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^73.0.1"
wheel = "^0.44.0"
django = "^5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
