[tool.poetry]
name = "projeto-django-1"
version = "0.1.0"
description = ""
authors = ["joserobertoferreira <joseroberto.ferreira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^73.0.1"
wheel = "^0.44.0"
django = "^5.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
taskipy = "^1.13.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I','F','E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
server = 'phyton manage.py runserver'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
